@startuml graphorm

namespace Library {

    class QueryDriver {
        insertQuery()
        selectQuery()
    }
    class ComunicaDriver

    class DataModel {
        NodeMetadata[] nodes
        NodeManager manager
        createMetadatas()
        createNodeManager()
        getMetadata()
    }
    class NodeManager {
        DataModel model
        QueryDriver driver
        find(nodeClass, sources, session?)
        save(nodeClass, source, session?)
    }
    class NodeMetadata
    class EdgeMetadata

    namespace Global {
        class NodeMetadataArgs
        class EdgeMetadataArgs
    }
}

namespace UserCode {
    class Decorators
    class NodeClass
}

Library.ComunicaDriver --|> Library.QueryDriver

Library.DataModel --> "1..N" Library.NodeMetadata
Library.DataModel "1" *--* "1" Library.NodeManager
Library.NodeManager --* "1" Library.QueryDriver

Library.NodeMetadata --> Library.Global.NodeMetadataArgs: built from
Library.NodeMetadata --* "1..N" Library.EdgeMetadata

Library.EdgeMetadata --> Library.Global.EdgeMetadataArgs: built from

UserCode.NodeClass --> UserCode.Decorators: has
UserCode.Decorators --> Library.Global.NodeMetadataArgs: creates
UserCode.Decorators --> Library.Global.EdgeMetadataArgs: creates
@enduml